fix scrollbar; increase width of chat

--- a/app/client/base.styl
+++ b/app/client/base.styl
@@ -34,6 +34,9 @@ ul
 .display-block
     display: block
 
+.width-100
+    width: 100%
+
 // Custom Classes
 .waartaa-logo
     font-family: 'Lato', sans-serif
@@ -56,9 +59,6 @@ ul
         padding-right: 15px
         padding-left: 5px
         font-size: 15px
-
-.align-dropdown-caret
-    margin-right: 16px
 
 nav
     .container
